fix : remove redundant horizontal scroll bar for small screens

--- a/resources/stylesheets/special-offer-carousel.css
+++ b/resources/stylesheets/special-offer-carousel.css
@@ -12,27 +12,29 @@
     position: relative;
 }
 
-#sale-title:before{
-    content: " ";
-    position: absolute;
-    background: #fff;
-    bottom: -6px;
-    width: 320px;
-    height: 30px;
-    z-index: -1;
-    left: 50%;
-    margin-left: -160px;
-}
+@media all and (min-width: 350px) {
+    #sale-title:before{
+        content: " ";
+        position: absolute;
+        background: #fff;
+        bottom: -6px;
+        width: 320px;
+        height: 30px;
+        z-index: -1;
+        left: 50%;
+        margin-left: -160px;
+    }
 
-#sale-title:after{
-    content: " ";
-    position: absolute;
-    border: 1px solid #f5f5f5;
-    bottom:8px;
-    left: 0;
-    width: 100%;
-    height: 0;
-    z-index: -2;
+    #sale-title:after{
+        content: " ";
+        position: absolute;
+        border: 1px solid #f5f5f5;
+        bottom:8px;
+        left: 0;
+        width: 100%;
+        height: 0;
+        z-index: -2;
+    }
 }
 
 .item {
